# feb26bmlops_int_rakuten

./: .dockerignore  .env  .gitignore  ARCHITECTURE.md  Dockerfile.api  Makefile  README.md  api_and_training_notes.md  commands.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  up.sh
.dvc/: config
.github/workflows/: python-app.yml
dags/: incremental_training.py  rakuten_ingestion.py  rakuten_training.py
data/: .gitignore  image_data.dvc  import_daten.sql.dvc
notebooks/: 1.0-knw-dblayer.ipynb  1.1-knw-bert-test.ipynb
notebooks/old_training_notebooks/: rakuten_eval_BERT.ipynb  rakuten_modelling_BERT_optim.ipynb  rakuten_modelling_LinearSVM_optim.ipynb  rakuten_split.ipynb  setup_env.sh
scripts/: run_predict.py  run_train.py  test_sql_loader.py
scripts/text_pipeline/: README_TEXT.md  rakuten_eval_LinearSVM.ipynb  rakuten_eval_comp.ipynb  rakuten_preprocessing.ipynb  rakuten_translation.ipynb
src/api/: Dockerfile  __init__.py  app.py  job_store.py  jobs.py  predict.py  schemas.py  services.py  train.py
src/data/: create_image_db.py  loaders.py
src/features/: text_preprocess.py
src/models/: Train_Test.py  classifier.py  image_infer.py  mlflow_existing_models.py  mlflow_utils.py  predict_model.py  train_model.py  trainer.py
src/pipelines/: __init__.py  text_pipeline.py
streamlit_app/: Dockerfile  app.py  pyproject.toml
streamlit_app/pages/: 1_Home.py  2_Architecture.py  3_Live_Training.py  4_Live_Predict.py
tests/: test_integration.py
