[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rakuten-mlops"
version = "0.1.0"
description = "Rakuten multimodal training and inference package"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]