[project]
name = "feb26bmlops-int-rakuten"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "dagshub>=0.6.8",
    "dvc[s3]>=3.66.1",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.47",
    "transformers>=5.2.0",
]

[tool.setuptools.packages.find]
where = ["src", ".src/*"]
exclude = ["tests", "tests.*"]
