[project]
name = "feb26bmlops-int-rakuten"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch",
    "torchvision",
    "transformers==5.2.0",
    "datasets==4.5.0",
    "accelerate==1.12.0",
    "scikit-learn==1.8.0",
    "numpy==2.4.2",
    "scipy==1.17.1",
    "fastapi==0.133.1",
    "uvicorn==0.41.0",
    "pydantic==2.12.5",
    "sqlalchemy==2.0.47",
    "psycopg2-binary>=2.9.11",
    "dvc[s3]>=3.66.1",
    "dagshub>=0.6.8",
    "ipykernel>=7.2.0",
    "evaluate==0.4.6",
    "tqdm==4.67.3",
    "requests==2.32.5",
    "pandas",
    "mlflow>=3.10.1",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["src", ".src/*"]
exclude = ["tests", "tests.*"]
